--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -22,21 +22,36 @@
   font-size: 32px;
   cursor: pointer;
 }
+.navItems {
+  animation: floating 02s linear infinite;
+  display: flex;
+  align-items: center;
 
-.navButton {
+  .userImg {
+    margin-left: 16px;
+  }
+  img {
+    border-radius: 50%;
+    border: 2px solid cyan;
+  }
+  a {
+    text-decoration: none;
+    color: #058c96;
+  }
+}
+
+.navButton a {
   display: inline-block;
   background-color: #fff;
-  text-decoration: none;
   margin-left: 20px;
   border: none;
   border-radius: 4px;
   padding: 5px 10px;
   cursor: pointer;
-  color: #058c96;
   font-weight: bold;
   font-size: 16px;
   transition: box-shadow 0.2s;
-  animation: floating 02s linear infinite;
+
   &:hover {
     /* box-shadow: 0 0 10px 2px #084e4d; */
     box-shadow: 0 0 10px 2px #fff;
