--- a/src/pages/Authentication/Login.module.css
+++ b/src/pages/Authentication/Login.module.css
@@ -97,6 +97,9 @@
   margin-top: 30px;
   padding: 15px;
   padding-top: 0;
+  div {
+    cursor: pointer;
+  }
 }
 .socialBtns::before {
   position: absolute;
@@ -143,6 +146,7 @@
     font-weight: 600;
     color: var(--color-primary);
     background: transparent;
+    cursor: pointer;
   }
   &:hover {
     transform: translateY(-2px);
