--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -29,11 +29,19 @@
 
   .userImg {
     margin-left: 16px;
-  }
-  img {
     border-radius: 50%;
+    width: 40px;
+    height: 40px;
     border: 2px solid cyan;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    img {
+      border-radius: 50%;
+    }
   }
+
   a {
     text-decoration: none;
     color: #058c96;
