--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -11,7 +11,7 @@
   color: #084e4d;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   position: relative;
-  width: 1024px;
+  width: 100%;
   isolation: isolate;
   h1 {
     background-color: #fff;
@@ -36,6 +36,7 @@
     z-index: -1;
   }
 }
+
 .headerSection {
   position: relative;
   background-color: rgba(0, 161, 158, 0.7);
@@ -49,4 +50,15 @@ video {
   top: 0;
   left: 0;
   z-index: -1;
+}
+
+@media screen and (max-width: 991.98px) {
+  .homeTitle {
+    width: 90%;
+    &::after {
+      top: 100%;
+      right: 0;
+      z-index: -1;
+    }
+  }
 }
