--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,6 +1,6 @@
 .footer {
   width: 100%;
-  width: 1024px;
+  max-width: 1024px;
   font-size: 16px;
 }
 
@@ -25,4 +25,13 @@
   text-align: center;
   margin-bottom: 32px;
   color: #084e4d;
+}
+
+@media screen and (max-width: 991.98px) {
+  .fLists {
+    padding-inline: 16px;
+    flex-direction: column;
+    gap: 32px;
+    text-align: center;
+  }
 }
