--- a/src/pages/list/list.css
+++ b/src/pages/list/list.css
@@ -96,3 +96,11 @@
     font-size: 32px;
   }
 }
+@media screen and (max-width: 767.98px) {
+  .listContainer {
+    padding-inline: 16px;
+  }
+  .listWrapper {
+    flex-direction: column-reverse;
+  }
+}
