FIX: Fix the header search element responsiveness on tab

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -161,6 +161,12 @@
   .hero {
     padding-inline: 16px;
   }
+}
+
+@media screen and (max-width: 767.98px) {
+  .hero {
+    padding-inline: 16px;
+  }
   .headerList {
     flex-wrap: wrap;
     margin-bottom: 0;
